--- a/MyIntentService/app/src/main/res/layout/activity_main.xml
+++ b/MyIntentService/app/src/main/res/layout/activity_main.xml
@@ -15,18 +15,44 @@
             android:id="@+id/buttonStart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Start" />
+            android:text="Start IntentService" />
 
         <Button
             android:id="@+id/buttonStop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Stop" />
+            android:text="Stop IntentService" />
 
         <TextView
             android:id="@+id/textViewService"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
+
+        <Button
+            android:id="@+id/buttonStartService"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Start Normal Service" />
+
+        <Button
+            android:id="@+id/buttonStopService"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Stop Normal Service" />
+
+        <EditText
+            android:id="@+id/editTextDataString"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Data String" />
+
+        <Button
+            android:id="@+id/buttonSendService"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Send data to a normal service" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
